deploy-update.yaml
apiVersion: apps/v1             # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.8        # Update the version of nginx from 1.7.9 to 1.8
        ports:
        - containerPort: 80
