emptydir.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-ed
spec:
  containers:
  - image: redis
    name: test-container
    volumeMounts:
     - name: cache-volume
       mountPath: /cache

  volumes:
  - name: cache-volume
    emptyDir: {}
