hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-hostpath
spec:
  containers:
  - image: redis
    name: redis-container
    volumeMounts:
     - name: test-vol
       mountPath: /test-mnt     #mount point in pod

  volumes:
  - name: test-vol
    hostPath:
      path: /test-vol           #mount point as directory in kube node1
