mysecret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
   name: mysecretpod
spec:
   containers:
   - name: mysecretpod
     image: redis
     volumeMounts:
     - mountPath: /etc/foo
       name: foo
       readOnly: true

   volumes:
     - name: foo
       secret:
         secretName: mysecret
