nginx-deploy.yaml
apiVersion: apps/v1     # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: nginx-deploy
  labels:
    app: nginx-app
spec:
  replicas: 1           # tells deployment to run 2 pods matching the template
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx-container
        image: nginx:1.7.9
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /test-pd
            name: test-volume
      volumes:
       - name: test-volume
         persistentVolumeClaim:
            claimName: pvc-local-1
