resource_limit.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mylimit
  labels:
    app: resource
spec:
    containers:
      - name: container1
        image: nginx
        resources:
          requests:
            memory: "32Mi"
            cpu: "200m"
          limits:
            memory: "64Mi"
            cpu: "250m"
